# crai

./: Cargo.toml  LICENSE  README.md  TODO.md  crai.toml.example  justfile
src/: error.rs  lib.rs  main.rs
src/ai/: claude.rs  kiro.rs  mod.rs  provider.rs  schema.rs  scoring.rs
src/config/: mod.rs  schema.rs
src/diff/: chunk.rs  filter.rs  git.rs  mod.rs  parser.rs
src/review/: mod.rs  session.rs  subagent.rs
src/tui/: app.rs  event.rs  layout.rs  mod.rs
src/tui/views/: analysis.rs  diff.rs  file_tree.rs  help.rs  mod.rs  stats.rs  stream.rs  summary.rs
