[package]
name = "crai"
version = "0.1.0"
edition = "2021"
description = "AI-powered code review tool"
authors = ["benjol"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
regex = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
